# filemanager-kded

./: CMakeLists.txt  README  filemanager.cpp  filemanager.h  filemanager_dbus.cpp  filemanager_dbus.h  filemanagerredirector.desktop  filemanagerredirector.json  org.kde.filemanagerredirector.xml
